update:タグ比較機能の拡充

--- a/index.html
+++ b/index.html
@@ -250,6 +250,12 @@
                 <h4>🏷️ タグ分析</h4>
                 <div class="analysis-controls">
                     <div class="control-group">
+                        <label>タグ:</label>
+                        <select id="analysisTagSelect">
+                            <option value="">タグを選択...</option>
+                        </select>
+                    </div>
+                    <div class="control-group">
                         <label>表示:</label>
                         <select id="analysisViewMode">
                             <option value="overall">全体</option>
